# monotorrent

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  README  README.md  alpha.txt  azure-pipelines.yml  build.proj  configure  coverage.bat  pack.bat  version.txt
.github/: FUNDING.yml
.github/workflows/: dotnet.yml
branches/version-0.12.1/: README  TODO  script.in
doc/: edit-doc  update-doc
doc/en/: index.xml  ns-Hyena.Collections.xml  ns-MonoTorrent.Client.Managers.xml  ns-MonoTorrent.Client.Messages.FastPeer.xml  ns-MonoTorrent.Client.Messages.Standard.xml  ns-MonoTorrent.Client.Messages.UdpTracker.xml  ns-MonoTorrent.Client.PieceWriters.xml  ns-MonoTorrent.Client.xml  ns-MonoTorrent.Dht.Listeners.xml  ns-MonoTorrent.Dht.xml
docs/: index.html  manifest.json  xrefmap.yml
docs/api/: MonoTorrent.BEncoding.BEncodedDictionary.html  MonoTorrent.BEncoding.BEncodedList.html  MonoTorrent.BEncoding.BEncodedNumber.html  MonoTorrent.BEncoding.BEncodedString.html  MonoTorrent.BEncoding.BEncodedValue.html  MonoTorrent.BEncoding.BEncodingException.html  MonoTorrent.BEncoding.RawReader.html  MonoTorrent.BEncoding.html  MonoTorrent.BitField.html  MonoTorrent.Client.AddressRange.html  MonoTorrent.Client.AttemptConnectionEventArgs.html  MonoTorrent.Client.BanList.html  MonoTorrent.Client.BanListParser.html  MonoTorrent.Client.BlockEventArgs.html  MonoTorrent.Client.BlockInfo.html  MonoTorrent.Client.ByteBuffer.html  MonoTorrent.Client.ClientEngine.html  MonoTorrent.Client.ConnectionAttemptFailedEventArgs.html  MonoTorrent.Client.ConnectionFailureReason.html  MonoTorrent.Client.ConnectionManager.html  MonoTorrent.Client.ConnectionMonitor.html  MonoTorrent.Client.Connections.ConnectionFactory.html  MonoTorrent.Client.Connections.IConnection.html  MonoTorrent.Client.Connections.html  MonoTorrent.Client.CriticalExceptionEventArgs.html  MonoTorrent.Client.DhtPeersAdded.html  MonoTorrent.Client.DiskManager.html  MonoTorrent.Client.EncryptionType.html  MonoTorrent.Client.EngineSettings.html  MonoTorrent.Client.EngineSettingsBuilder.html  MonoTorrent.Client.Error.html  MonoTorrent.Client.FastResume.html  MonoTorrent.Client.FastResumeMode.html  MonoTorrent.Client.ILocalPeerDiscovery.html  MonoTorrent.Client.ITorrentData.html  MonoTorrent.Client.ITorrentDataExtensions.html  MonoTorrent.Client.ITorrentFileInfo.html  MonoTorrent.Client.ITorrentFileInfoExtensions.html  MonoTorrent.Client.Listeners.IPeerListener.html  MonoTorrent.Client.Listeners.PeerListenerFactory.html  (+131 more)
docs/articles/: intro.html  selective_downloading.html  toc.html
src/: .editorconfig  BigEndianBigInteger.cs  BitOps.cs  Cache.cs  ChangeLog  Client.mdp  ClientMakeFile  Common.mdp  Directory.Build.props  Directory.Build.targets  EnsureThreadPool.cs  GitInfoHelper.cs  ICacheable.cs  IListExtensions.cs  Logger.cs  MainLoop.cs  Makefile  Makefile.am  Makefile.in  Makefile.include  MemoryExtensions.cs  MonoTorrent.1.1.dotCover  MonoTorrent.mds  MonoTorrent.sln  MonoTorrent.sln.DotSettings  NullabilityAttributes.cs  Prebuild.xml  Prebuilda.xml  README  SemaphoreSlimExtensions.cs  SimpleSpinLock.cs  TODO  ThreadSwitcher.cs  TorrentFileExtensions.cs  Tracker.mdp  TrackerTest.mdp  UdpClientExtensions.cs  ValueStopwatch.cs  aclocal.m4  autogen.sh  (+11 more)
src/BInspector/: BInspector.mdp  Main.cs  MainWindow.cs
src/Benchmark/: Benchmark.csproj  Program.cs
src/BuildScripts/: AutoTools.sh  Clean.sh  MonoDevelop.sh  VS2003.bat  nant.sh
src/DhtSampleClient/: Program.cs  SampleClient.csproj
src/DotNetCoreSample/: DotNetCoreSample.csproj  Program.cs  Top10Listener.cs  packages.lock.json
src/Libs/: Upnp.xml
src/MonoTorrent.BEncoding.Tests/: BEncodingTest.cs  MonoTorrent.BEncoding.Tests.csproj
src/MonoTorrent.Interface/: AUTHORS  ChangeLog  Makefile.am  MonoTorrent.Interface.csproj  MonoTorrent.Interface.mdp  README  autogen.sh  configure.ac  monotorrent.desktop  monotorrent.in
src/MonoTorrent.Interface/po/: POTFILES.in  pl.po
src/MonoTorrent.Interface/res/: Makefile.am  ui.xml
src/MonoTorrent.Interface/src/: AssemblyInfo.cs.in  Makefile  Makefile.am  MonoTorrent.Client.dll.mdb  MonoTorrent.Common.dll.mdb
src/MonoTorrent.Interface/src/MonoTorrent.Interface/: PathConstants.cs  Program.cs
src/MonoTorrent.Interface/src/MonoTorrent.Interface/Controller/: PreferencesController.cs  TorrentsController.cs  WindowController.cs
src/MonoTorrent.Interface/src/MonoTorrent.Interface/Helpers/: Formatter.cs
src/MonoTorrent.Interface/src/MonoTorrent.Interface/Model/: TorrentFilesList.cs  TorrentsList.cs  TorrentsRepository.cs
src/MonoTorrent.Interface/src/MonoTorrent.Interface/Settings/: BEncodedSettingsStorage.cs  Configuration.cs  GConfSettingsStorage.cs  ISettingsStorage.cs  SettingsStorage.cs
src/MonoTorrent.Interface/src/MonoTorrent.Interface/View/: DialogWithTitle.cs  MonoTorrentStatusbar.cs  NewTorrentDialog.cs  PreferencesDialog.cs  TorrentFilesView.cs  TorrentView.cs  UIBuilder.cs
trunk/: Makefile  README  configure
(+2869 files in other folders)
